k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: production
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        #image: fullstack:v1
        image: 924450925338.dkr.ecr.us-east-1.amazonaws.com/development-images:fullstack-v1
        resources:
          requests:
            memory: "2G"
            cpu: "1"
          limits:
            memory: "2.5G"
        ports:
        - containerPort: 3000
