k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: production
spec:
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 3000
  type: LoadBalancer
